@@ -1,5 +1,6 @@
 pgcenter (development) unstable; urgency=low
 
+  * pg_stat_statements timing improvements.
   * truncate conninfo string if it too long.
   * add swap,dirty,writeback stats.
   * connection info moved from left to right side.
